<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TabWidget>

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:id="@+id/tab2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/et_put"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|top"
                    android:inputType="textMultiLine"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" 
                    android:onClick="click_et_put">

                    <requestFocus />
                </EditText>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/bt_clear"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/green"
                        android:onClick="bt_clear"
                        android:text="@string/clear"
                        android:textSize="13sp" />

                    <Button
                        android:id="@+id/bt_save"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/orange"
                        android:onClick="bt_save"
                        android:text="@string/saved"
                        android:textSize="13sp" />

                    <Button
                        android:id="@+id/bt_share"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_share_3"
                        android:onClick="bt_share"
                        android:text="@string/share"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab3"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <ListView
                        android:id="@+id/listRecord"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </ListView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <EditText
                            android:id="@+id/editText1"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableRight="@drawable/icon_search_5"
                            android:ems="10"
                            android:hint="@string/tvSearch" />

                        <Button
                            android:id="@+id/button1"
                            android:layout_width="36dp"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:drawableLeft="@drawable/ic_delete_3"
                            android:onClick="bt_emptyClick" />
                    </LinearLayout>

                    <ListView
                        android:id="@+id/listView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" >
                    </ListView>

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/empty_list" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</TabHost>